bug. results text bleeding resolved

--- a/style.css
+++ b/style.css
@@ -194,11 +194,9 @@ body{
 	font-weight: var(--fw-bold);
 	margin-bottom: 8px;
 }
-#show_grid{
+#show_grid, #show_list{
 	height: var(--input-height);
-}
-#show_list{
-	height: var(--input-height);
+	background-color: red;
 }
 #show_grid:checked, #show_list:checked{
 	background-color: red;
@@ -414,7 +412,7 @@ body{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	gap: 12px;
+	gap: 22px;
 }
 /* GRID */
 .card__cont__card{
@@ -444,7 +442,7 @@ body{
 	background-color: var(--cl-light);
 	border-radius: 0 0 var(--box-radius) var(--box-radius);
 	width: 100%;
-	height: 70px;
+	height: 90px;
 	padding: 12px;
 	position: absolute;
 	bottom: 0;
@@ -589,7 +587,6 @@ body{
 }
 
 /* ----------------------------- ❌ OVERLAP */
-
 .detail{
 	border: 1px solid var(--cl-light);
 }
